# Bike-Helsinki

./: .clang-format  .claudeignore  .gitignore  Aptfile  CLAUDE.md  README.md  TODO.txt  notes.txt  render.yaml
backend/: app.js  index.js  install-deps.sh  notes.txt  package-lock.json  package.json
backend/bindings/: aStar.cpp  aStar.hpp  binding.gyp  kd_snap.cpp  route.cpp  route.hpp
backend/config/: env.js
backend/controllers/: config.controller.js  health.controller.js  route.controller.js  snap.controller.js
backend/lib/: computeBBox.js  numbers.js
backend/middleware/: error.js  notFound.js
backend/requests/: set_filter.rest
backend/routes/: config.routes.js  health.routes.js  index.js  route.routes.js  snap.routes.js
backend/services/: addons.service.js  graph.service.js  helsinki.service.js  route.service.js
docs/: commitMessageStyle.md  gitWorkFlow.md
docs/backend/: backend-architecture.md
docs/frontend/: camera-behavior.md  frontend-architecture.md
docs/plans/: frontend-testing-suite-plan.md  future-improvement-ideas.md  location-tracking-roadmap.md  maplibre-migration-plan.md  r2-migration-plan.md
frontend/: CLAUDE.md  index.html  notes.txt  package-lock.json  package.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: backend.js  digitransit.js  http.js  index.js  nominatim.js
frontend/src/components/: ControlPanel.jsx  InfoWindow.jsx  MapView.jsx  RideStats.jsx  SurfacePenaltyControl.jsx
frontend/src/context/: RouteContext.jsx
frontend/src/context/hooks/: useReverseGeocoding.js
frontend/src/features/devTools/: enabled.js  (+1 more)
frontend/src/hooks/: useIsMobile.js
frontend/src/shared/: index.js
frontend/src/utils/: api.js
ingest/: all.sh  binHeaders.hpp  buildGraph.cpp  helsinki.geojson  nodeCollector.cpp  nodeCollector.hpp  utils.hpp  wayCollector.cpp  wayCollector.hpp  writeBins.cpp  writeBins.hpp
injest/: CMakeLists.txt  SurfaceTypes.hpp  all.sh  binHeaders.hpp  buildGraph.cpp  buildKdTree.cpp  debugAll.sh  injest_todo.txt  nodeCollector.cpp  nodeCollector.hpp  notes.txt  surfaceTypes.hpp  wayCollector.cpp  wayCollector.hpp  writeBins.cpp  writeBins.hpp  writeBlobs.cpp  writeBlobs.hpp
scripts/: install-hooks.sh
scripts/hooks/: post-checkout  pre-push  prepare-commit-msg
(+58 files in other folders)
